# mtm

./: .gitignore  IMPLEMENTATION_CHECKLIST.md  OBJECT_MODEL.md  README.md  Spec.md  mkdocs.yml  pyproject.toml
benchmarks/: raw_transition_optimization.py
docs/: debugger-presentation-spec.md  debugger-repl-spec.md  debugger-stepper.md  help-menu-rfc.md  index.md  l2-incrementer-runbook.md
docs/architecture/: debugger-stepper.md
documentation/: DOCS-SCRATCHPAD.MD  Spec.md
examples/: demo.py  incrementer_tm.py  palindrome_tm.py
mtm/: __init__.py  artifacts.py  cli.py  compiled_band.py  compiler.py  demo.py  lowering.py  lowering_checks.py  meta_asm.py  meta_asm_host.py  meta_interpreter.py  outer_tape.py  pretty.py  program_input.py  raw_tm.py  raw_transition_optimization.py  raw_transition_tm.py  semantic_objects.py  source_encoding.py  source_file.py  tape_encoding.py  universal.py  utm_band_layout.py
plans/: abi-lattice-delimited-fields.md  debugger-facts-presentation-rewrite.md  debugger-presentation.md  docs-restructure.md  self-hosting-artifact-tranche.md
tests/: lowering_checks.py  test_cli_debugger.py  test_debugger_presenter.py  test_debugger_session.py  test_debugger_shell.py  test_examples.py  test_lowering.py  test_meta_asm.py  test_raw_trace.py  test_raw_transition_optimization.py  test_semantic_objects.py  test_tm_file_input.py
tools/: generate_l1_raw_guest_data.py  generate_l2_meta_asm_data.py  generate_raw_tm_c.py  generate_raw_tm_runner_data.py  l1_raw_guest_runner.c  l2_meta_asm_runner.c  raw_tm_runner.c  trace-viewer.html
(+52 files in other folders)
