[project]
name = "mtm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
    "rich>=15.0.0",
]

[project.scripts]
mtm = "mtm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs-material==9.7.6",
]
